# EmailSort

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_email_categorise.md  TODO.md  config.example.toml  config.toml  main.py  pyproject.toml  requirements.txt  run_email_categorise.sh
config/: config.example.toml  config.toml
email_categorise/: auth.py  cli.py  codex_runner.py  config.py  email_triage_agent.md  fine_tune.py  graph_client.py  model_client.py  schemas.py  triage_logic.py  utils.py
email_categorise/json_schemas/: tone_profile.schema.json  triage_output.schema.json
scripts/: init_email.sh  run_email.sh  run_email_categorise.sh
tests/: conftest.py  test_category_colors.py  test_graph_integration.py
